# TheSimulation

./: .dockerignore  .env.sample  .gitignore  =15.0.1  AGENTS.md  DOCKER_USAGE.md  Dockerfile  Makefile  README.md  WEB_VISUALIZER_README.md  add_visualization.py  apply_sync_fixes.py  async_event_driven_llm_toy_v2.py  bluesky_post.py  client.py  config.yaml  docker-compose.yml  imagegenerationprompt.txt  license.md  life_generation.py  life_summary_Eleanor_Vance_1995-07-15.json  life_summary_Eleanor_Vance_32_generated.json  main.py  main2.py  main3.py  main_async.py  main_async_textual_backup.py  monitor_redis.py  persona.json  requirements.txt  run-docker.bat  run-docker.sh  setup_simulation.py  setup_simulation_adk.py  simulacra_deltas.json  simulacra_state.json  simulation_state.json  simulation_viz.js  start-full-simulation.bat  start-full-simulation.sh  (+16 more)
.claude/: settings.local.json
.github/: pull_request_template.md
data/: world_config_05e07dad-f24b-420b-822c-1ae7862220f6.json  world_config_577a022a-1bfe-406c-b3e3-f082db5691c4.json  world_config_cce7f369-f7dc-4e11-8136-5a142fa5d787.json
docker/: redis.conf  startup.sh  supervisord.conf
engines/: character_engine.py  world_engine.py
legacy_code/: main.py  main_async2.py
prompts/: models.py  prompt_manager.py  prompts.py
simulation-dashboard/: .gitignore  README.md  index.html  start.sh  (+4 more)
simulation-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
simulation-dashboard/src-tauri/capabilities/: default.json
simulation-dashboard/src-tauri/icons/: icon.icns
simulation-dashboard/src-tauri/src/: main.rs
(+299 files in other folders)
